--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@tanstack/react-query-devtools": "^5.17.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "recharts": "^2.10.3",
